--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
 		<form id="ajaxForm" action="" method="POST">
 			<h2>Add a calendar entry</h2>
 			<div>
-				<label for=”form_title”>Title</label>
-				<input placeholder="Title" type="text" name="title" id=”form_title”>
+				<label for="form_title">Title</label>
+				<input placeholder="Title" type="text" name="title" id="form_title">
 			</div>
 			<div>
-				<label for=”form_startTime”>Start time</label>
-				<input placeholder="Start time" type="datetime-local" name="startTime" id=”form_startTime”>
+				<label for="form_startTime">Start time</label>
+				<input placeholder="Start time" type="datetime-local" name="startTime" id="form_startTime">
 				<input type="hidden" name="startTime.timezone">
 			</div>
 			<button type="submit">Send</button>
