--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<link rel="icon" type="image/png" href="https://cdn0.iconfinder.com/data/icons/expenses-vs-income/30/__donation_social_care_calendar_heart-512.png"/>
 	<style type="text/css">
 
-
 	body, input, button {
 		font-family: sans-serif;
 	}
@@ -32,6 +31,7 @@
 	form button:hover {
 		background: #5ad;
 	}
+
 	form button {
 		transition: 0.3s background;
 		font-weight: bold;
@@ -43,39 +43,42 @@
 		border-radius: 3px;
 		border: none;
 		box-shadow: 0 0 6px #0002
-
 	}
-
 
 	table {
 		font-size: 16px;
-	  border-spacing: 1;
-	  border-collapse: collapse;
-	  background: white;
-	  border-radius: 6px;
-	  overflow: hidden;
-	  max-width: 800px;
-	  width: 100%;
-	  margin: 20px auto;
-	  position: relative;
+		border-spacing: 1;
+		border-collapse: collapse;
+		background: white;
+		border-radius: 6px;
+		overflow: hidden;
+		max-width: 800px;
+		width: 100%;
+		margin: 20px auto;
+		position: relative;
 	}
+
 	table td, table th {
-	  padding-left: 8px;
+		padding-left: 8px;
 	}
+
 	table thead tr {
-	  height: 60px;
-	  background: #eee;
-	  font-size: 16px;
+		height: 60px;
+		background: #eee;
+		font-size: 16px;
 	}
+
 	table tbody tr {
-	  height: 48px;
-	  border-bottom: 1px solid #E3F1D5;
+		height: 48px;
+		border-bottom: 1px solid #E3F1D5;
 	}
+
 	table tbody tr:last-child {
-	  border: 0;
+		border: 0;
 	}
+
 	table td, table th {
-	  text-align: left;
+		text-align: left;
 	}
 
 	.error  {
@@ -88,6 +91,7 @@
 		background: #fffcfc;
 		font-weight: bold;
 	}
+
 	</style>	
 </head>
 <body>
@@ -108,7 +112,8 @@
 				</tbody>				
 			</table>
 		</div>
-		<form id="ajaxForm" action="" method="POST">
+
+		<form id="ajaxForm" action="https://ile.aamu.app/api/v1/forms/bb04d7ca-c17f-47b1-99c1-26ed2e0966c9" method="POST" enctype="multipart/form-data" >
 			<h2>Add a calendar entry</h2>
 			<div>
 				<label for="form_title">Title</label>
@@ -119,6 +124,14 @@
 				<input placeholder="Start time" type="datetime-local" name="startTime" id="form_startTime">
 				<input type="hidden" name="startTime.timezone">
 			</div>
+			<div>
+				<label for="form_filex">Filex</label>
+				<input type="file" name="filex" id="form_filex">
+			</div>
+			<div>
+				<label for="form_filex2">Filex2</label>
+				<input type="file" multiple name="filex2" id="form_filex2">
+			</div>
 			<button type="submit">Send</button>
 		</form>
 	</div>
@@ -127,8 +140,8 @@
 	<script type="text/javascript">
 
 		// Set these!
-		const API_KEY = '';
-		const FORM_ENDPOINT = '';
+		const API_KEY = '79a9cf7f37b14f35950d241cc43afef3-126dd20614a19be768f8baa3aab5e530';
+		const FORM_ENDPOINT = 'https://ile.aamu.app/api/v1/forms/bb04d7ca-c17f-47b1-99c1-26ed2e0966c9';
 
 		var oldData = [];
 
@@ -176,7 +189,7 @@
 		}
 
 		function getData() {
-			fetch('https://api.aamu.app/api/v1/graphql/', {
+			fetch('https://ile.aamu.app/api/v1/graphql/', {
 				method: 'POST',
 				headers: {
 					'Content-Type': 'application/json',
@@ -240,7 +253,7 @@
 
 		setAndCheckApiKeys();
 		getData();
-		setInterval(getData, 1000 * 10);
+		// setInterval(getData, 1000 * 10);
 		addTimezoneInfo();
 		document.getElementById('ajaxForm').addEventListener('submit', submit);
 	</script>
