--- a/index.html
+++ b/index.html
@@ -122,14 +122,6 @@
 				<input placeholder="Start time" type="datetime-local" name="startTime" id="form_startTime">
 				<input type="hidden" name="startTime.timezone">
 			</div>
-			<div>
-				<label for="form_filex">Filex</label>
-				<input type="file" name="filex" id="form_filex">
-			</div>
-			<div>
-				<label for="form_filex2">Filex2</label>
-				<input type="file" multiple name="filex2" id="form_filex2">
-			</div>
 			<button type="submit">Send</button>
 		</form>
 	</div>
@@ -138,8 +130,8 @@
 	<script type="text/javascript">
 
 		// Set these!
-		const API_KEY = '';
-		const FORM_ENDPOINT = '';
+		const API_KEY = '98a96a2a024f419c93fb494f4e64917a-5f180817c58cfd01603fc18c04e1b7d4';
+		const FORM_ENDPOINT = 'https://api.aamu.app/api/v1/db/6935a779-38cf-4bef-81cd-6c910783e0f6';
 
 		var oldData = [];
 
