--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	</div>
 	<div style="margin: auto; max-width: 900px">
 		<p>This is an example app which uses Aamu.app's database.</p>
-		<p>You should have the database created, and then go to the database settings — in there you should enable forms, get the Forms Endpoint and enter it into <em>FORM_ENDPOINT</em> in this html file. You should also generate the GraphQL API key in the database settings and enter it into <em>API_KEY</em>.</p>
+		<p>You should have the database created, and then go to the database settings &ndash; in there you should enable forms, get the Forms Endpoint and enter it into <em>FORM_ENDPOINT</em> in this html file. You should also generate the GraphQL API key in the database settings and enter it into <em>API_KEY</em>.</p>
 	</div>
 	<div style="display: flex; margin: auto; max-width: 900px">
 		
