--- a/index.html
+++ b/index.html
@@ -188,39 +188,39 @@
 			}
 		}
 
-		function getData() {
-			fetch('https://api.aamu.app/api/v1/graphql/', {
-				method: 'POST',
-				headers: {
-					'Content-Type': 'application/json',
-					'Accept': 'application/json',
-					'x-api-key': API_KEY
-				},
-				body: JSON.stringify({ query: `
-					{
-					  Sheet1Collection(sort: { startTime: DESC }) {
-					    id
-					    created_at
-					    updated_at
-					    title
-					    startTime
-					  }
-					}
-				`})
-			})
-			.then(r => r.json())
-			.then(data => {
-				console.log(data);
+		async function getData() {
+			try {
+				const response = await fetch('https://api.aamu.app/api/v1/graphql/', {
+					method: 'POST',
+					headers: {
+						'Content-Type': 'application/json',
+						'Accept': 'application/json',
+						'x-api-key': API_KEY
+					},
+					body: JSON.stringify({ query: `
+						{
+						Sheet1Collection(sort: { startTime: DESC }) {
+							id
+							created_at
+							updated_at
+							title
+							startTime
+						}
+						}
+					`})
+				});
+				if (!response.ok) throw new Error(`HTTP error: ${response.status}`);
+				const data = await response.json();
 				if (data?.errors) {
-					data.errors.forEach(e => setError(e.message))
+					data.errors.forEach(e => setError(e.message));
+				} else if (data?.data) {
+					handleData(data.data);
+				} else {
+					setError('No data returned from API');
 				}
-				handleData(data.data)
-			})
-			.catch(err => {
-				console.log('Error:')
-				console.log(data)
-				console.log(err)
-			})
+			} catch (err) {
+				console.log('Error:', err);
+			}
 		}
 
 		function addTimezoneInfo() {
